# MaUtils

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mama/sample/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/mama/utils/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  render.cpp
app/src/main/cpp/include/: render.h
app/src/main/cpp/utils/: opencv_utils.cpp  opencv_utils.h  opengl_utils.cpp
app/src/main/cpp/utils/include/: log_utils.h  opengl_utils.h
app/src/main/java/com/mama/sample/: MaApplication.java  MainActivity.java
app/src/main/java/com/mama/sample/base/: BaseActivity.java
app/src/main/java/com/mama/sample/camera/: Camera2Activity.java  Camera2Render.java  CameraLayout.java
app/src/main/java/com/mama/sample/lib/: NativeLib.java
app/src/main/java/com/mama/sample/utils/: BitmapUtil.java  FileUtils.java  OrientationUtils.java  YuvUtils.java
app/src/main/java/com/mama/utils/: MainActivity.java
app/src/main/res/drawable/: btn_compare.xml  btn_compare_normal.xml  btn_compare_pressed.xml
app/src/main/res/layout/: actionbar.xml  activity_camera2.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/mama/sample/: ExampleUnitTest.java
app/src/test/java/com/mama/utils/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
